# carpios

./: CMakeLists.txt  README.md  objects.inv  searchindex.js
doctrees/: environment.pickle  index.doctree
example/: clean.py  run.py
example/advection_1d/: CMakeLists.txt  main.cpp  plot.py  run.py
example/advection_1d_TVD/: CMakeLists.txt  main.cpp  plot.py  run.py
example/advection_1d_TVD_non_uniform/: main.cpp  plot.py  run.py
example/advection_2d_TVD/: main.cpp  plot.py  run.py
example/advection_2d_TVD_CircleMove/: CMakeLists.txt  main.cpp  plot.py  run.py
example/geometry/ear_clipping/: CMakeLists.txt  examplepolygon  main.cpp  man  plot.py  run.py  shui
example/helmholtz_2d/: main.cpp  plot.py
example/helmholtz_2d_2/: main.cpp  plot.py  run.py
example/helmholtz_2d_3/: main.cpp  plot.py
example/ns_cavity/: CMakeLists.txt  main.cpp  plot.py  run.py
example/ns_cavity_compare/: CMakeLists.txt  main.cpp  monitor.py  plot.py  run.py
example/ns_cavity_compare/gerris_result/: xprof_1000_6  xprof_10_6  xprof_200_6  yprof_1000_6  yprof_10_6  yprof_2000_6  yprof_200_6  yprof_300_6  yprof_5000_6
example/ns_cavity_kim/: main.cpp  monitor.py  plot.py  run.py
example/ns_cavity_kim/gerris_result/: xprof_100_6  xprof_2000_6  xprof_300_6  xprof_5000_6  yprof_100_6
example/ns_sin/: CMakeLists.txt  main.cpp  plot.py  run.py
example/operation_s_interplolate/: main.cpp  plot.py  run.py
example/poisson_1d/: main.cpp  plot.py
example/poisson_2d/: plot.py  run.py
example/poisson_2d_explicit/: main.cpp  plot.py  run.py
example/poisson_2d_source/: CMakeLists.txt  main.cpp  plot.py
example/py/: botella_o.py
example/solver_jacobi/: main.cpp  plot.py  run.py
example/structure/poisson_1d/: CMakeLists.txt  main.cpp  plot.py  run.py
example/structure/poisson_2d/: CMakeLists.txt  main.cpp  plot.py  run.py
html/: .buildinfo  genindex.html  index.html  search.html
lib/: .gitignore  type_define.hpp
lib/algebra/: BLAS_Level1.hpp  BLAS_Level2.hpp  algebra.hpp  algebra_define.hpp  arithmetic.hpp  array_list.hpp  matrix.hpp  matrix_SparCompCol.hpp  matrix_SparCompRow.hpp  matrix_SparCoord.hpp  matrix_small.hpp  polynomial.hpp  preconditioner.hpp  solver_matrix.hpp  sort.hpp  space.hpp  vector.hpp  vector_list.hpp
lib/domain/: adaptive.hpp  boundary.hpp  cell.hpp  data.hpp  domain.hpp  domain_define.hpp  grid.hpp  node.hpp  path.hpp  shape.hpp  stencil.hpp
lib/geometry/: _actor_gnuplot.hpp  _bbox.hpp  _contour.hpp  _creation.hpp  _line.hpp  _operation.hpp  _plane.hpp  _point.hpp  _point_chain.hpp  _polygon.hpp  _polygon_boolean.hpp  _relation.hpp  _segment.hpp  _sweep.hpp  _tri_tri_intersect.hpp  _triangle.hpp  geometry.hpp  geometry_define.hpp
lib/geometry/io/: _actor_gnuplot.hpp  _actor_plotly.hpp  _io_file.hpp
lib/geometry/objects/: _bbox.hpp  _box.hpp  _contour.hpp  _edge.hpp  _line.hpp  _objects.hpp  _plane.hpp  _point.hpp  _point_chain.hpp  _polygon.hpp  _segment.hpp  _triangle.hpp  _triface.hpp  _trisurface.hpp  _vertex.hpp
lib/geometry/operations/: _creation.hpp  _intersection.hpp  _operation.hpp  _polygon_boolean.hpp  _polygon_partition.hpp  _sweep.hpp  _tri_tri_intersect.hpp  _tri_tri_intersect_02.hpp  _tri_tri_intersect_97.hpp  _trisurface_boolean.hpp
lib/geometry/surface/: _edge.hpp  _triface.hpp  _trisurface.hpp  _vertex.hpp
lib/io/: CMakeLists.txt  csv.cpp  csv.hpp  gnuplot.cpp  gnuplot.h  gnuplot_actor.cpp  gnuplot_actor.h  io_define.hpp  mmio.cpp  mmio.h  plotly.cpp  plotly.h  plotly_actor.cpp  plotly_actor.h  vtk.hpp
lib/structure/: s_advection.hpp  s_boundary.hpp  s_data.hpp  s_define.hpp  s_equation.hpp  s_event.hpp  s_expression.hpp  s_ghost.hpp  s_grid.hpp  s_io_file.hpp  s_io_plotly.hpp  s_io_vtk.hpp  s_mask.hpp  s_ns.hpp  s_ns_explicit.hpp  s_ns_kim.hpp  s_operation.hpp  s_poisson.hpp  s_solver.hpp  s_stencil.hpp  s_time.hpp  s_vector.hpp
lib/ts/: ts.h  ts_AABBox.h  ts_BBTree.h  ts_creation.h  ts_define.h  ts_delaunay.h  ts_edge.h  ts_face.h  ts_intersect.h  ts_intersection.h  ts_io_ply.h  ts_operation.h  ts_overlap.h  ts_point.h  ts_polygon.h  ts_segment.h  ts_surface.h  ts_surface_constructor.h  ts_triangle.h  ts_tt.h  ts_vertex.h
lib/utility/: CMakeLists.txt  any.hpp  clipper.hpp  clock.cpp  clock.h  format.cpp  multikey_map.hpp  random.h
pyscript/: read.py
source/: conf.py  index.rst
src/: carpio_define.hpp  main.cpp
src/calculation/: advection.hpp  calculation_define.hpp  equation.hpp  event.hpp  expression.hpp  interpolate.cpp  interpolate.h  ns.hpp  ns_explicit.hpp  poisson.hpp  scalar.cpp  scalar.h  timestep.hpp  vof.h
test/: _test.hpp  test_define.hpp
test/algebra/: _test_matrix.hpp  _test_matrix_small.hpp  _test_polynomial.hpp  _test_solver.hpp
test/calculation/: _test_equation.hpp  _test_ns.hpp  _test_ns_explicit.hpp  _test_poisson.hpp
test/domain/: _test_boundary.hpp  _test_domain.hpp
test/geometry/: test_contour.hpp  test_operation.hpp  test_polygon.hpp  test_polygon_partition.hpp  test_triangle.hpp
test/input_files/: simple.csv  tri1.gts  tri2.gts
test/io/: _test_csv.hpp  _test_plotly.hpp
test/structure/: _test_s_advection.hpp  _test_s_grid.hpp  _test_s_ns.hpp  _test_s_operation.hpp  _test_s_poisson.hpp
test/ts/: test_AABBox.h  test_delaunay.h  test_overlap.h  test_ply.h  test_surface_constructor_2d.hpp  test_surface_constructor_3d.hpp
test/utility/: _test_any.hpp  _test_multikey_map.hpp
